--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - "0.10"
 sudo: required
-before_script :
-  - node app.js &
-  - sleep 5
+# before_script :
+#   - node app.js &
+#   - sleep 5
