--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "0.10"
+#   - "0.12"
+env: 
+  - PORT=8080 IP=0.0.0.0
 sudo: required
 before_script :
   - npm start &
